--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/sanctum": "^2.6",
         "laravel/tinker": "^2.5",
         "livewire/livewire": "^2.5",
+        "spatie/laravel-backup": "^6.16",
         "yajra/laravel-datatables-oracle": "~9.0"
     },
     "require-dev": {
