--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "tailwindcss": "^2.2.2"
     },
     "dependencies": {
+        "bootstrap": "^5.0.2",
         "popper.js": "^1.16.1"
     }
 }
